Revert few changes